# haskell-ide-engine

./: cabal.project  stack.yaml
hie-bios/src/HIE/Bios/: Cradle.hs
hie-manager/: hie-manager.cabal
hie-manager/src/Haskell/Ide/Engine/Manager/: Main.hs  Options.hs
src/Haskell/Ide/Engine/Transport/: JsonTcp.hs  Pipes.hs
