name:                hie-manager
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/haskell/haskell-ide-engine.git
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
-- copyright:
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag pedantic
  Description: Enable -Werror
  Default:     False

executable hie-manager
  main-is:             Haskell/Ide/Engine/Manager/Main.hs
  other-modules:       Haskell.Ide.Engine.Manager.Options
  -- other-extensions:
  build-depends:       aeson
                     , base
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , haskell-ide-engine
                     , hie-base
                     , mtl
                     , optparse-applicative
                     , pipes
                     , pipes-aeson >= 0.4
                     , pipes-concurrency
                     , pipes-network
                     , text
  hs-source-dirs:      src
  ghc-options:         -Wall
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010
